# temporal-lags

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: CDR_1.5deg_Fuhrman.csv  emissions.csv  peak_temperatures.csv  volcanic.csv
data/modified/: emissions.csv  emissions_high.csv  emissions_low.csv  emissions_medium.csv  volcanic.csv
data/outputs/: peak_temperatures.csv
nbs/: 0_Generate_data_for_figures_1_and_2.ipynb  0_Modify_emissions_input_files.ipynb  1_Run_FaIR.ipynb  1_Run_FaIR_for_figure_3.ipynb  1_Run_FaIR_for_figure_4.ipynb  2_Make_figures.ipynb  FaIR CDR temporal.ipynb  FaIR_CDR_temporal_Figure3.ipynb  Fair_example.ipynb  Figure_1.ipynb  Figure_2.ipynb  Figure_3.ipynb  Figure_4.ipynb  Figures_1_and_2.ipynb  Modify_emissions.ipynb  vis_settings.py
