[project]
name = "temporal-lags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coiled>=1.128.2",
    "fair>=2.2.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "make>=0.1.6.post2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "s3fs>=2025.9.0",
    "pip==24.2",
    "seaborn>=0.13.2",
]
